fix spacing on chrome

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -138,6 +138,11 @@
     flex-basis: 0;
     /*border: 2px solid var(--md-primary-fg-color);*/
 }
+
+/* Space between reinforcements */
+.reinforcement + .reinforcement {
+    margin-top: 0.5em;
+}
   
 .reinforcement .portrait {
     height: 105px;
@@ -165,6 +170,10 @@
     display: inline-block;
     vertical-align: top;
     margin-bottom: 0.5em;
+}
+
+.reinforcement > div > div > a {
+    margin-bottom: 0 !important;
 }
 
 .reinforcement span {
